@@ -38,6 +38,7 @@ Version 0.0.4b (in progress)
 * [Fixed] Broken variable assignment.
 * [Improved] Handling of theme uninstalls and changes to default themes.
 * [Removed] Redundant admin checks in Admin CP.
+* [Improved] Handle multiple PsychoStats instances with multiple themes installed.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
